syntax = "proto3";

option go_package = "github.com/alvarotor/user-go/user";

package user;

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

service User {
  rpc Create (UserRequest) returns (UserIDRequest) {}
  rpc Get (UserIDRequest) returns (UserResponse) {}
  rpc Update (UpdateUserRequest) returns (UserIDResponse) {}
  rpc Delete (UserIDRequest) returns (UserIDResponse) {}
  rpc List (google.protobuf.Empty) returns (ListUsersResponse) {}
}

message UserRequest {
  string email = 1;
  string password = 2;
  string name = 3;
  uint32 age = 4;
  uint32 gender = 5;
  string country_origin = 6;
  string profile_pic = 7;
  uint32 login_length_time = 8;
  bool validated = 9;
  string validation_code = 10;
  bool admin = 11;
  bool super_admin = 12;
  string code = 13;
  google.protobuf.Timestamp code_expire = 14;
}

message UserIDRequest {
  uint32 id = 1;
}

message UpdateUserRequest {
  uint32 id = 1;
  UserRequest user = 2;
}

message UserIDResponse {
  uint32 id = 1;
}

message ListUsersResponse {
  repeated UserResponse users = 1;
}

message UserResponse {
  string email = 1;
  string name = 2;
  uint32 age = 3;
  uint32 gender = 4;
  string country_origin = 5;
  string profile_pic = 6;
  uint32 login_length_time = 7;
  bool validated = 8;
  string validation_code = 9;
  bool admin = 10;
  bool super_admin = 11;
  string code = 12;
  google.protobuf.Timestamp code_expire = 13;
}